# dauntless-helper

./: .gitignore  Cargo.toml  README.md  main
cpp-ver/: CMakeLists.txt  dllmain.cpp  menu.cpp  menu.h
cpp-ver/FW1FontWrapper-ver/: CMakeLists.txt  injector.cpp  menu.cpp
cpp-ver/detours/: syelog.lib
cpp-ver/imgui-ver/: CMakeLists.txt  dllmain.cpp  injector.cpp  menu.cpp
cpp-ver/imgui-ver/helper/: helper.cpp  helper.h
cpp-ver/lib/: detours.lib
injector/: Cargo.toml
injector/src/: byte.rs  main.rs
rust-ver/: Cargo.toml
rust-ver/src/: d3d11_vmt_tables.rs  lib.rs
src/: main.rs  util.rs
src/util/: game.rs  mod.rs  windows.rs
