[package]
name = "dauntless-helper"
version = "4.2.0"
authors = ["Xavier Lau <c.estlavie@icloud.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dirs = "*"
winapi = { version = "*", features = ["libloaderapi", "memoryapi", "processthreadsapi", "synchapi", "winuser"] }
